k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: adelaide-weather
  labels:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: adelaide-weather
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/component: frontend
  sessionAffinity: None
